--- a/Onyx/Onyx.Cartographer/Web.Release.config
+++ b/Onyx/Onyx.Cartographer/Web.Release.config
@@ -14,6 +14,12 @@
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   -->
+  <connectionStrings>
+    <add name="DefaultConnection"
+      connectionString="Data Source=WIN-9FHFJ8JU2GF\CHAOTIC;Initial Catalog=cartographer;Integrated Security=True"
+      xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+  </connectionStrings>
+  
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
