--- a/Onyx/Onyx.Cartographer/Onyx.Cartographer.csproj
+++ b/Onyx/Onyx.Cartographer/Onyx.Cartographer.csproj
@@ -182,6 +182,7 @@
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Server\DomainConnector.cs" />
+    <Compile Include="ViewModels\User\SignIn.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Data\onyx_development.mdf" />
