--- a/Onyx/Onyx.Cartographer/Onyx.Cartographer.csproj
+++ b/Onyx/Onyx.Cartographer/Onyx.Cartographer.csproj
@@ -193,6 +193,7 @@
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Server\DomainConnector.cs" />
+    <Compile Include="ViewModels\Role\AddRole.cs" />
     <Compile Include="ViewModels\User\SignIn.cs" />
   </ItemGroup>
   <ItemGroup>
