--- a/Onyx/Onyx.Cartographer/Onyx.Cartographer.csproj
+++ b/Onyx/Onyx.Cartographer/Onyx.Cartographer.csproj
@@ -221,6 +221,7 @@
     <Content Include="Areas\AdminCP\Views\_ViewStart.cshtml" />
     <Content Include="Areas\AdminCP\Views\Users\Edit.cshtml" />
     <Content Include="Areas\AdminCP\Views\Roles\Index.cshtml" />
+    <Content Include="Content\pages\admincp\_header.scss" />
     <None Include="Content\pages\_home.scss" />
     <Content Include="Content\pages\_scrollable_content.scss" />
     <Content Include="Content\shared\_css_fixes.scss" />
