--- a/Onyx/Onyx.Cartographer/Onyx.Cartographer.csproj
+++ b/Onyx/Onyx.Cartographer/Onyx.Cartographer.csproj
@@ -210,7 +210,6 @@
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Server\DomainConnector.cs" />
-    <Compile Include="ViewModels\Role\AddRole.cs" />
     <Compile Include="ViewModels\User\SignIn.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -234,6 +233,8 @@
     <Content Include="Areas\AdminCP\Views\_ViewStart.cshtml" />
     <Content Include="Areas\AdminCP\Views\Users\Edit.cshtml" />
     <Content Include="Areas\AdminCP\Views\Roles\Index.cshtml" />
+    <Content Include="Areas\AdminCP\Views\Roles\Add.cshtml" />
+    <Content Include="Areas\AdminCP\Views\Roles\Edit.cshtml" />
     <Content Include="Content\pages\admincp\_header.scss" />
     <None Include="Content\pages\_home.scss" />
     <Content Include="Content\pages\_scrollable_content.scss" />
