--- a/Onyx/Onyx.Cartographer/Onyx.Cartographer.csproj
+++ b/Onyx/Onyx.Cartographer/Onyx.Cartographer.csproj
@@ -210,6 +210,7 @@
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Server\DomainConnector.cs" />
+    <Compile Include="ViewModels\User\UserAdminEdit.cs" />
     <Compile Include="ViewModels\User\SignIn.cs" />
   </ItemGroup>
   <ItemGroup>
