--- a/Onyx/Onyx.Cartographer/Onyx.Cartographer.csproj
+++ b/Onyx/Onyx.Cartographer/Onyx.Cartographer.csproj
@@ -69,6 +69,7 @@
     <Reference Include="System.Net.Http.Formatting, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.4.0.30506.0\lib\net40\System.Net.Http.Formatting.dll</HintPath>
     </Reference>
+    <Reference Include="System.Security" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -149,8 +150,10 @@
     <Compile Include="Extensions\Attributes\AuthenticatedRedirect.cs" />
     <Compile Include="Extensions\Attributes\RequireAdminAuthentication.cs" />
     <Compile Include="Extensions\Attributes\RequireAuthentication.cs" />
+    <Compile Include="Extensions\Cryptography\Pbkdf2Crypto.cs" />
     <Compile Include="Extensions\Cryptography\Sha1Crypto.cs" />
     <Compile Include="Extensions\Helpers\ActionLinkButtonHelper .cs" />
+    <Compile Include="Extensions\VariousFunctions.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
