--- a/Onyx/Onyx.Cartographer/Onyx.Cartographer.csproj
+++ b/Onyx/Onyx.Cartographer/Onyx.Cartographer.csproj
@@ -207,9 +207,18 @@
     <Compile Include="Migrations\201308021630576_ChangedHowRolesAreSavedInUsers.Designer.cs">
       <DependentUpon>201308021630576_ChangedHowRolesAreSavedInUsers.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201308031447590_AddedProjectModel.cs" />
+    <Compile Include="Migrations\201308031447590_AddedProjectModel.Designer.cs">
+      <DependentUpon>201308031447590_AddedProjectModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201308031513351_AddedIsDeletedToProjects.cs" />
+    <Compile Include="Migrations\201308031513351_AddedIsDeletedToProjects.Designer.cs">
+      <DependentUpon>201308031513351_AddedIsDeletedToProjects.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\DatabaseContext.cs" />
     <Compile Include="Models\ErrorModel.cs" />
+    <Compile Include="Models\Project.cs" />
     <Compile Include="Models\Role.cs" />
     <Compile Include="Models\Session.cs" />
     <Compile Include="Models\User.cs" />
@@ -422,6 +431,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201308021630576_ChangedHowRolesAreSavedInUsers.resx">
       <DependentUpon>201308021630576_ChangedHowRolesAreSavedInUsers.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201308031447590_AddedProjectModel.resx">
+      <DependentUpon>201308031447590_AddedProjectModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201308031513351_AddedIsDeletedToProjects.resx">
+      <DependentUpon>201308031513351_AddedIsDeletedToProjects.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
